@@ -61,15 +61,15 @@ L(xx1):	ld	r6, -8(up)
 	addi	rp, rp, -8
 
 L(xx0):	bne	cr6, L(x10)
-L(x00):	ld	r6, -8(r4)
-	ld	r7, -16(r4)
+L(x00):	ld	r6, -8(up)
+	ld	r7, -16(up)
 	bne	cr7, L(100)
 L(000):	addi	rp, rp, 32
 	b	L(lo0)
 L(100):	addi	up, up, 32
 	b	L(lo4)
-L(x10):	ld	r8, -8(r4)
-	ld	r9, -16(r4)
+L(x10):	ld	r8, -8(up)
+	ld	r9, -16(up)
 	bne	cr7, L(110)
 L(010):	addi	up, up, -16
 	addi	rp, rp, 16
@@ -78,7 +78,9 @@ L(110):	addi	up, up, 16
 	addi	rp, rp, 48
 	b	L(lo6)
 
-L(sml):	mtctr	n
+L(sml):	cmpdi	cr0, n, 0
+	beqlr-	cr0
+	mtctr	n
 L(t):	ld	r6, -8(up)
 	addi	up, up, -8
 	std	r6, -8(rp)
